[gd_scene load_steps=8 format=3 uid="uid://b4xrok1haqo22"]

[ext_resource type="Texture2D" uid="uid://bb2q7yrifrhfb" path="res://textures/material_icons/add_48dp_FFFFFF_FILL1_wght400_GRAD0_opsz48.png" id="1_6e1ou"]
[ext_resource type="Script" path="res://scripts/scenes/launcher_manager.gd" id="1_rqdtu"]
[ext_resource type="Texture2D" uid="uid://batmra06bcv0m" path="res://textures/material_icons/settings_48dp_FFFFFF_FILL1_wght400_GRAD0_opsz48.png" id="2_n7gws"]
[ext_resource type="PackedScene" uid="uid://cj8cjhev5m5ji" path="res://scenes/objects/info_edit_panel.tscn" id="3_22spp"]
[ext_resource type="PackedScene" uid="uid://c0l6fpj25dnrk" path="res://scenes/objects/game_button.tscn" id="3_xf4ov"]
[ext_resource type="PackedScene" uid="uid://b08kn4jakfgfc" path="res://scenes/objects/setting_panel.tscn" id="4_2g35v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tn237"]
bg_color = Color(0.14, 0.14, 0.14, 1)
corner_radius_top_right = 8
corner_radius_bottom_right = 8

[node name="MainLevel" type="Control" node_paths=PackedStringArray("fill_target", "button_container")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rqdtu")
fill_target = NodePath("HBoxContainer/Panel/ScrollContainer")
button_container = NodePath("HBoxContainer/Panel/ScrollContainer/GridContainer")
game_button_scene = ExtResource("3_xf4ov")
info_edit_panel_scene = ExtResource("3_22spp")
setting_panel_scene = ExtResource("4_2g35v")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ToolBar" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tn237")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ToolBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="AddButton" type="Button" parent="HBoxContainer/ToolBar/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("1_6e1ou")
flat = true
icon_alignment = 1
expand_icon = true

[node name="SettingButton" type="Button" parent="HBoxContainer/ToolBar/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("2_n7gws")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Panel" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Panel"]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="GridContainer" type="HFlowContainer" parent="HBoxContainer/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 32
alignment = 1
last_wrap_alignment = 1
